# stivale

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
barebones/: Cargo.toml  limine.cfg
barebones/.cargo/: kernel.ld
barebones/src/: main.rs
src/: epoch.rs  firmware.rs  framebuffer.rs  header.rs  lib.rs  memory.rs  module.rs  rsdp.rs  tag.rs  terminal.rs  utils.rs
src/header/: framebuffer.rs  mod.rs  paging.rs
src/v1/: mod.rs
src/v2/: header.rs  mod.rs  tag.rs  utils.rs
stivale-proc/: Cargo.toml
stivale-proc/src/: lib.rs
