[package]
name = "stivale-boot"
description = "Rust crate for parsing stivale and stivale 2 structures"
version = "0.3.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/Andy-Python-Programmer/stivale"

readme = "README.md"
categories = ["no-std"]

[dependencies]
bitflags = "1.3.2"
