[package]
name = "stivale-boot"
description = "Rust crate for parsing stivale and stivale 2 structures"
version = "0.3.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/Andy-Python-Programmer/stivale"

readme = "README.md"
categories = ["no-std"]

[features]
helper-macros = ["stivale-proc"]
uuid = ["dep:uuid"]

default = []

[dependencies]
bitflags = "1.3.2"
stivale-proc = { path = "stivale-proc", optional = true }               # FIXME: publish stivale-proc
uuid = { version = "0.8.2", default-features = false, optional = true }
