[package]
name = "stivale-proc"
description = "Rust crate for parsing stivale and stivale 2 structures"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/Andy-Python-Programmer/stivale"

categories = ["no-std"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"

[dependencies.syn]
features = ["full"]
version = "1.0.91"
